create servo move sample

--- a/client/index.html
+++ b/client/index.html
@@ -5,10 +5,12 @@
     	<link rel="icon" type="image/png" href="favicon.ico" />
    </HEAD>
 <BODY>
-   <img src="assets/images/yellowLine.png" width="100%"/>
-   
-   <H1>warp-os-pi tutorial</H1>
-   <P><a href="/01-1.ledBlink">01-1.arduino led blink</a></P>
+  <img src="assets/images/yellowLine.png" width="100%"/>
+
+  <H1>warp-os-pi tutorial</H1>
+  <P><a href="/01-1.ledBlink">01-1.arduino led blink</a></P>
+  <P><a href="/01-2.sliderServo">01-2.arduino servo control</a></P>
+
 
 </BODY>
 </HTML>
