--- a/client/index.html
+++ b/client/index.html
@@ -10,6 +10,7 @@
   <H1>warp-os-pi tutorial</H1>
   <P><a href="/01-1.ledBlink">01-1.arduino led blink</a></P>
   <P><a href="/01-2.sliderServo">01-2.arduino servo control</a></P>
+  <P><a href="/02-1.roombaController">02-1.roomba local controller</a></P>
 
 
 </BODY>
