--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   <P><a href="/01-1.ledBlink">01-1.arduino led blink</a></P>
   <P><a href="/01-2.sliderServo">01-2.arduino servo control</a></P>
   <P><a href="/02-1.roombaController">02-1.roomba local controller</a></P>
-
+  <P><a href="/02-2.roombaServoLed">02-2.roomba local controller with led blink and servo move</a></P>
 
 </BODY>
 </HTML>
