--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
   <P><a href="/01-2.sliderServo">01-2.arduino servo control</a></P>
   <P><a href="/02-1.roombaController">02-1.roomba local controller</a></P>
   <P><a href="/02-2.roombaServoLed">02-2.roomba local controller with led blink and servo move</a></P>
+  <P><a href="/03-1.warp-pi-ver0.0.1">03-1. roomba and arduino with adawarp.js ver 0.0.1</a></P>
 
 </BODY>
 </HTML>
