--- a/client/index.html
+++ b/client/index.html
@@ -8,11 +8,12 @@
   <img src="assets/images/yellowLine.png" width="100%"/>
 
   <H1>warp-os-pi tutorial</H1>
-  <P><a href="/01-1.ledBlink">01-1.arduino led blink</a></P>
-  <P><a href="/01-2.sliderServo">01-2.arduino servo control</a></P>
-  <P><a href="/02-1.roombaController">02-1.roomba local controller</a></P>
-  <P><a href="/02-2.roombaServoLed">02-2.roomba local controller with led blink and servo move</a></P>
-  <P><a href="/03-1.warp-pi-ver0.0.1">03-1. roomba and arduino with adawarp.js ver 0.0.1</a></P>
+  <P><a href="/011.simpleVideoChat">011.simple video chat using Adawarp.js</a></P>
+  <P><a href="/021.ledBlink">021.arduino led blink</a></P>
+  <P><a href="/022.sliderServo">022.arduino servo control</a></P>
+  <P><a href="/031.roombaController">031.roomba local controller</a></P>
+  <P><a href="/032.roombaServoLed">032.roomba local controller with led blink and servo move</a></P>
+  <P><a href="/041.warp-pi-ver0.0.1">041. roomba and arduino with adawarp.js ver 0.0.1</a></P>
 
 </BODY>
 </HTML>
