add message to html

--- a/client/041.warp-pi-ver0.0.1/index.html
+++ b/client/041.warp-pi-ver0.0.1/index.html
@@ -42,7 +42,7 @@ button{
       <p>PartnerID: <span id="partnerID">-</span></p>
   </div>
   <!--show received data from partner-->
-  <div id="receive_message"></div>
+  <div>message : <span id="receive_message">---</span></div>
   <!--both video field-->
   <div>
       <video id="myVideo" style="display: none" autoplay muted></video>
